# virgil-iotkit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  VERSION  _v_s_q_device_roles_8h_source.html  _v_s_q_device_type_8h_source.html  _v_s_q_helpers_8h.html  _v_s_q_io_t_kit_8h.html  _v_s_q_io_t_kit_8h_source.html  _v_s_q_mac_8h_source.html  _v_s_q_snap_i_n_f_o_client_8h_source.html  _v_s_q_snap_i_n_f_o_client_qml_8h.html  _v_s_q_snap_i_n_f_o_client_qml_8h_source.html  _v_s_q_snap_service_base_8h_source.html  _v_s_q_snap_sniffer_qml_8h_source.html  _v_s_q_udp_broadcast_8h_source.html  annotated.html  asn1-cryptogram_8h.html  asn1-cryptogram_8h_source.html  aws-message-bin_8h.html  aws-message-bin_8h_source.html  base64_8h.html  base64_8h_source.html  clangformat.cmake  class_v_s_q_app_config.html  class_v_s_q_app_config_a966ea1b35b6b0d6d472ae6762cc6b9e8_cgraph.dot  class_v_s_q_app_config_aa5b65cab1bfb245107454344fc13cba8_icgraph.dot  class_v_s_q_app_config_ad04dc8ce08344327d7435e6b48c821c1_cgraph.dot  class_v_s_q_app_config_ad04dc8ce08344327d7435e6b48c821c1_cgraph.md5  class_v_s_q_app_config_ad656445162f69f6c2916d165492da465_cgraph.dot  class_v_s_q_app_config_ad656445162f69f6c2916d165492da465_cgraph.md5  class_v_s_q_app_config_af72c157d252781ce78dc95ffaa1a0daf_icgraph.dot  class_v_s_q_device_roles.html  class_v_s_q_device_roles_a2bac177943b83180197efe6a174932c3_icgraph.dot  class_v_s_q_device_roles_acd6dcf278a8d6474e52b336d326dc3b2_cgraph.dot  class_v_s_q_device_roles_acd6dcf278a8d6474e52b336d326dc3b2_cgraph.md5  class_v_s_q_device_serial.html  (+854 more)
converters/: CMakeLists.txt
converters/libs_ext/mbedtls/: mbedtls.cmake
converters/src/: asn1.c  converters_mbedtls.c  crypto_format_converters.c  cryptogram_converters.c  pubkey_converters.c  signature_converters.c  simple_asn1.c
default-impl/: CMakeLists.txt
default-impl/cloud/: CMakeLists.txt
default-impl/cloud/curl-http/: CMakeLists.txt
default-impl/cloud/curl-https/: CMakeLists.txt
default-impl/crypto/: CMakeLists.txt
default-impl/crypto/vs-ateccx08A-secmodule/: CMakeLists.txt
default-impl/crypto/vs-soft-hsm/: CMakeLists.txt
default-impl/crypto/vs-soft-secmodule/: CMakeLists.txt
default-impl/message-bin/aws-message-bin/: CMakeLists.txt
default-impl/qt-udp-broadcast/: CMakeLists.txt
default-impl/qt-udp-broadcast/src/: VSQUdpBroadcast.cpp
demo/nix/: CMakeLists.txt  README.md
demo/nix/bootloader/: CMakeLists.txt
demo/nix/common/: CMakeLists.txt
demo/nix/dummy-keys/: dummy-auth1.key  dummy-firmware1.key
demo/nix/gateway/: CMakeLists.txt
demo/nix/initializer/: CMakeLists.txt
demo/nix/tests/: CMakeLists.txt  main.c
demo/nix/thing/: CMakeLists.txt
examples/nix/common/: CMakeLists.txt
ext/jsmn/: CMakeLists.txt
helpers/json/: CMakeLists.txt
helpers/json/src/: json_generator.c  json_parser.c
high-level/: CMakeLists.txt
high-level/src/: high-level.c
hsm/: CMakeLists.txt
hsm/src/: asn1_cryptogram.c  hsm.c  hsm_helpers.c  hsm_interface.c  hsm_sha2_routines.c  hsm_virgil_ecies.c
json/: CMakeLists.txt
json/src/: json_parser.c
modules/firmware/: CMakeLists.txt
modules/firmware/src/: firmware.c  update_fw_interface.c
protocols/sdmp/: CMakeLists.txt
protocols/sdmp/src/: sdmp.c
provision/: CMakeLists.txt
provision/src/: provision.c
provision/trust_list/: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/cmake/: TransitiveToolchainArgs.cmake  helpers.cmake  mingw32.toolchain.cmake  mips32.toolchain.cmake
sdk/cmake/toolchain/: apple.cmake
sdk/config/pc/: logger-config.h  trust_list-config.h
sdk/ext/aws-sdk/: CMakeLists.txt
sdk/ext/mbedtls/: mbedtls.cmake
sdk/git-hooks/: pre-commit
sdk/helpers/: CMakeLists.txt
sdk/helpers/threadsafe/: CMakeLists.txt
sdk/helpers/update/: CMakeLists.txt
sdk/high-level/: CMakeLists.txt
sdk/high-level/src/: high-level.c
sdk/modules/: CMakeLists.txt
sdk/modules/cloud/: CMakeLists.txt
sdk/modules/logger/: CMakeLists.txt
sdk/modules/messenger/: CMakeLists.txt
sdk/modules/provision/: CMakeLists.txt
sdk/modules/secbox/: CMakeLists.txt
sdk/scripts/: build-for-qt.sh  build-virgil-crypto-c.sh  build-virgil-sdk-cpp.sh  publish-firmware.sh
sdk/scripts/ish/: error.ish  lib-utils.ish
sdk/tools/: CMakeLists.txt  installVirgilCryptoGo.cmake
sdk/tools/snap-codgen/: CMakeLists.txt
sdk/tools/virgil-device-initializer/: README.md
sdk/tools/virgil-snapd/: CMakeLists.txt  README.md  main.go
sdk/tools/virgil-trust-provisioner/: README.md
tests/: CMakeLists.txt
tests/include/private/: netif_test_impl.h  private_helpers.h  test_hl_keys_data.h  test_tl_data.h
tests/src/: tests.c
tests/src/crypto/: aes.c  chacha20poly1305.c  converters.c  ecdh.c  ecdsa.c  hash.c  helpers.c  hmac.c  kdf.c  keypair.c  pubkeys_converters.c  random.c  secbox_test.c  sign_converters.c  test-pubkeys-converters.c  test-sign-converters.c  test_crypto.c  trust_list.c  virgil_ecies.c  x509.c
tests/src/firmware/: firmware_test.c
tests/src/helpers/: crypto_helpers.c  firmware_test_impl.c  global_test_impl.c  netif_test_impl.c
tests/src/sdmp/: fldt_tests.c  fwdt_tests.c  netif.c  prvs_tests.c  sdmp_tests.c  test_fldt.c  test_fwdt.c  test_netif.c  test_prvs.c
tests/src/secbox/: secbox_test.c
tests/src/snap/: snap_tests.c
tests/src/test_data/: test_hl_keys_data.c  test_tl_data.c
tests/src/update/: update_test.c
tools/c-implementation/: CMakeLists.txt
tools/cards-registrar/: CMakeLists.txt  README.md
tools/cards-registrar/scripts/: register-devices.sh
tools/cards-registrar/src/: CardsServiceInfo.cxx  DeviceRegistrar.cxx  Filesystem.cxx  ParamsCommadLine.cxx  main.cxx  (+1 more)
tools/factory-initializer/: .gitignore  CMakeLists.txt  README.md  archive.sh  build.sh
tools/virgil-firmware-signer/: CMakeLists.txt  README.md  main.go
tools/virgil-iot-factory-initializer/: CMakeLists.txt  main.go
trust_list/: CMakeLists.txt
trust_list/include/: vs_tl_structs.h  vs_trust_list.h
trust_list/src/: tl-private.c  tl_operations.c  trust_list.c  update_interface.c  update_tl_interface.c  vs_tl_operations.c  vs_trust_list.c
(+3718 files in other folders)
